# ecr-metrics

./: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  pyproject.toml  template.yml
src/ecr_metrics/: main.py
tests/: responses.md  test_main.py
