[tool.poetry]
name = "ecr-metrics"
version = "0.1.0"
description = "Lambda Function to collect ECR metrics and emit to CloudWatch"
authors = ["Mike Fiedler <miketheman@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ecr_metrics", from = "src" }]

[tool.poetry.scripts]
ecr-metrics = 'ecr_metrics:main.cli'

[tool.poetry.dependencies]
python = "~3.13.1"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
botocore = "^1.34.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"